# log-esp-opengl

./: Camera.cpp  Camera.hpp  GLErrorUtils.cpp  GLErrorUtils.hpp  IndexBuffer.cpp  IndexBuffer.hpp  README.md  Shader.cpp  Shader.hpp  SpiralModelGenerator.cpp  SpiralModelGenerator.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  help.cpp  main.cpp  meson.build  renderer.cpp  renderer.hpp  teste
res/shaders/: basic.shader
